<?xml version="1.0"?>
<package>
  <name>pepperl_fuchs_smartrunner</name>
  <version>0.1.1</version>
  <description>The Pepperl+Fuchs SmartRunner3D driver package</description>
  <maintainer email="git@breeze-innovations.com">git@breeze-innovations.com</maintainer>
  <author email="git@breeze-innovations.com">git@breeze-innovations.com</author> 
  <license>BSD</license>
  <url type="repository">https://github.com/x</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
