<?xml version="1.0"?>
<package>
  <name>pepperl_fuchs_smartrunner</name>
  <version>0.3.0</version>
  <description>The Pepperl+Fuchs SmartRunner driver package</description>
  <maintainer email="git@breeze-innovations.com">AK</maintainer>
  <maintainer email="opensource-jhe@de.pepperl-fuchs.com">Jan Hegner</maintainer>
  <author email="git@breeze-innovations.com">AK</author>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/PepperlFuchs/pf_smartrunner_ros_driver</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
